# license-guardian

./: .gitignore  CITATION.cff  CONTRIBUTING.md  COPYRIGHT  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
src/license_guardian/: __init__.py  cli.py  core.py  headers.py
tests/: test_license_file.py  test_sanity.py  test_spdx_header.py
