[tool.poetry]
name = "license-guardian"
version = "0.1.0"
description = "LICENSE/SPDX checker CLI. Always Green scaffold."
authors = ["CoderDeltaLAN <coderdeltalan.cargo784@8alias.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "license_guardian", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
black = "^24.8.0"
pytest = "^8.2.0"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
files = ["src"]
strict = true
warn_unused_ignores = true

[tool.poetry.scripts]
license-guardian = "license_guardian.cli:main"
